--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Logo-Portfolio – [Dein Name]</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f5f5f5;
+      color: #333;
+    }
+    header {
+      background: #e74c3c; /* Corazón-Rot */
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    h1 { margin: 0; }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 20px;
+    }
+    .card {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,.1);
+      overflow: hidden;
+      text-align: center;
+      padding: 10px;
+    }
+    .card img {
+      max-width: 100%;
+      height: auto;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #222;
+      color: #aaa;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Logo-Portfolio</h1>
+    <p>Entwürfe & Branding – erstellt von [Maya Tanaskovic]</p>
+  </header>
+
+  <main class="grid">
+    <div class="card">
+      <img src="images/KI Asisst-01.png" alt="Logo-Entwurf 1">
+      <p>Logo-Entwurf 1</p>
+    </div>
+    <div class="card">
+      <img src="images/KI Asisst-02.png" alt="Logo-Entwurf 2">
+      <p>Logo-Entwurf 2</p>
+    </div>
+    <div class="card">
+      <img src="images/KI Asisst-03.png" alt="Logo-Entwurf 3">
+      <p>Logo-Entwurf 3</p>
+    </div>
+     <div class="card">
+      <img src="images/KI Asisst-04.png" alt="Logo-Entwurf 4">
+      <p>Logo-Entwurf 4</p>
+  </main>
+
+  <footer>
+    © 2025 [Maya Tanaskovic] · Kontakt: tanaskovicmaya@gmail.com
+  </footer>
+</body>
+</html>
 
