--- a/index.html
+++ b/index.html
@@ -1,46 +1,68 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Logo-Portfolio – [Dein Name]</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Logo-Portfolio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: #f5f5f5;
-      color: #333;
-    }
-    header {
-      background: #e74c3c; /* Corazón-Rot */
-      color: white;
-      padding: 20px;
+      padding: 0;
+      background: #f9f9f9;
       text-align: center;
     }
-    h1 { margin: 0; }
-    .grid {
+
+    /* Überschrift mit Farbverlauf wie im Lebenslauf */
+    h1 {
+      background: linear-gradient(90deg, #006d7a, #1b9aaa);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-size: 2.8em;
+      font-weight: bold;
+      margin: 20px 0;
+    }
+
+    .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 20px;
       padding: 20px;
+      max-width: 1200px;
+      margin: auto;
     }
+
     .card {
       background: white;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,.1);
-      overflow: hidden;
-      text-align: center;
-      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      padding: 15px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
+
+    /* Hover-Effekt auf der Karte */
+    .card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+
+    /* Bilder Styling */
     .card img {
       max-width: 100%;
       height: auto;
+      border-radius: 8px;
+      transition: transform 0.3s ease;
     }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #222;
-      color: #aaa;
+
+    /* Bild vergrößert sich beim Hover */
+    .card img:hover {
+      transform: scale(1.1);
+    }
+
+    p {
+      margin-top: 10px;
+      font-weight: bold;
+      color: #333;
     }
   </style>
 </head>
