--- a/index.html
+++ b/index.html
@@ -87,16 +87,18 @@
   <!-- Bundle 1 -->
   <h2>✨ Logos für Corazon GmbH</h2>
   <div class="gallery">
-    <div class="card"><img src="images/corazon1.png" alt="Corazon Logo 1"><p>Corazon Logo 1</p></div>
-    <div class="card"><img src="images/corazon2.png" alt="Corazon Logo 2"><p>Corazon Logo 2</p></div>
-    <div class="card"><img src="images/corazon3.png" alt="Corazon Logo 3"><p>Corazon Logo 3</p></div>
+    <div class="card"><img src="images/corazon logo final file1-3.jpg" alt="Corazon Logo 1"><p>Corazon Logo 1</p></div>
+    <div class="card"><img src="images/corazon logo final file2-3.jpg" alt="Corazon Logo 2"><p>Corazon Logo 2</p></div>
+    <div class="card"><img src="images/corazon logo final file3-3.jpg" alt="Corazon Logo 3"><p>Corazon Logo 3</p></div>
   </div>
 
   <!-- Bundle 2 -->
   <h2>🤖 Logos für KI Assist</h2>
   <div class="gallery">
-    <div class="card"><img src="images/ki1.png" alt="KI Assist Logo 1"><p>KI Assist Logo 1</p></div>
-    <div class="card"><img src="images/ki2.png" alt="KI Assist Logo 2"><p>KI Assist Logo 2</p></div>
+    <div class="card"><img src="images/KI Asisst-01.png" alt="KI Assist Logo 1"><p>KI Assist Logo 1</p></div>
+    <div class="card"><img src="images/KI Asisst-02.png" alt="KI Assist Logo 2"><p>KI Assist Logo 2</p></div>
+    <div class="card"><img src="images/KI Asisst-03.png" alt="KI Assist Logo 3"><p>KI Assist Logo 3</p></div>
+    <div class="card"><img src="images/KI Asisst-04.png" alt="KI Assist Logo 4"><p>KI Assist Logo 4</p></div>
   </div>
 
   <!-- Bundle 3 -->
