--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Logo-Portfolio – Maya Tanaskovic</title>
 
-  <!-- Seriöse, moderne Schrift -->
+  <!-- Moderne, seriöse Schrift -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
       --muted:#6b7280;     /* Sekundärtext */
       --ring:#e2e8f0;      /* Card-Border */
       --ring-strong:#cbd5e1;
-      --shadow: 0 10px 30px rgba(2, 12, 27, .20);
+      --shadow: 0 10px 30px rgba(2,12,27,.20);
       --radius: 14px;
       --maxw: 1180px;
     }
@@ -64,9 +64,7 @@
       color:#e6f6f9;
       font-size: clamp(1rem, 1.6vw, 1.15rem);
     }
-    .cta{
-      display:inline-flex; gap:12px; flex-wrap:wrap; justify-content:center;
-    }
+    .cta{ display:inline-flex; gap:12px; flex-wrap:wrap; justify-content:center; }
     .btn{
       appearance: none; border:1px solid rgba(255,255,255,.6); color:#0b1220;
       background:#fff; padding:12px 16px; border-radius:12px; font-weight:700; text-decoration:none;
@@ -74,24 +72,16 @@
       transition: transform .2s ease, box-shadow .2s ease, border-color .2s ease;
     }
     .btn:hover{ transform: translateY(-1px); box-shadow: 0 10px 20px rgba(2,12,27,.24); }
-    .btn--ghost{
-      background: transparent; color:#fff; border-color: rgba(255,255,255,.55);
-    }
+    .btn--ghost{ background: transparent; color:#fff; border-color: rgba(255,255,255,.55); }
     .btn--ghost:hover{ border-color:#fff; }
 
     /* ===== Sections ===== */
-    .section{
-      max-width: var(--maxw);
-      margin: 28px auto 10px;
-      padding: 0 16px;
-    }
+    .section{ max-width: var(--maxw); margin: 28px auto 10px; padding: 0 16px; }
     .section__title{
       display:flex; align-items:center; gap:14px; justify-content:center; text-align:center;
       margin: 26px 0 12px;
     }
-    .section__title h2{
-      margin:0; font-size: clamp(1.15rem, 2.2vw, 1.45rem); color:#111827; letter-spacing:.3px;
-    }
+    .section__title h2{ margin:0; font-size: clamp(1.15rem, 2.2vw, 1.45rem); color:#111827; letter-spacing:.3px; }
     .section__rule{
       width: 90px; height: 3px; border-radius:999px;
       background: linear-gradient(90deg, var(--brand1), var(--brand2));
@@ -126,16 +116,10 @@
       display:flex; align-items:center; justify-content:center;
       overflow: hidden;
     }
-    .thumb img{
-      max-width: 100%; max-height: 100%;
-      transition: transform .25s ease;
-    }
+    .thumb img{ max-width: 100%; max-height: 100%; transition: transform .25s ease; }
     .card:hover .thumb img{ transform: scale(1.06); }
 
-    .meta{
-      display:flex; align-items:center; justify-content:space-between; gap:8px;
-      margin-top:10px; padding:0 2px;
-    }
+    .meta{ display:flex; align-items:center; justify-content:space-between; gap:8px; margin-top:10px; padding:0 2px; }
     .title{ font-weight:700; font-size:.95rem; color:#111827; }
     .tag{
       font-size:.78rem; color:#374151; background:#f1f5f9; border:1px solid #e2e8f0; padding:4px 8px; border-radius:999px;
@@ -152,8 +136,7 @@
     .lightbox__img{
       max-width: 100%; max-height: 90vh; border-radius: 16px;
       box-shadow: 0 20px 60px rgba(0,0,0,.5);
-      background:#fff;
-      padding: 18px; /* weißer Rand fürs Logo */
+      background:#fff; padding: 18px; /* weißer Rand fürs Logo */
     }
     .lightbox__close{
       position:absolute; top:-14px; right:-14px; width:42px; height:42px;
@@ -188,7 +171,6 @@
     }
     .pill:hover{ transform: translateY(-1px); box-shadow: 0 8px 18px rgba(2,12,27,.12); }
 
-    /* Bewegt sich weniger, wenn Nutzer das wünscht */
     @media (prefers-reduced-motion: reduce){
       .btn, .card, .thumb img, .lightbox__close { transition: none !important; }
     }
@@ -201,7 +183,7 @@
     <div class="hero__inner">
       <span class="eyebrow">Portfolio</span>
       <h1>Willkommen im Logo-Portfolio</h1>
-      <p>von <strong>Maya Tanaskovic</strong> · Ausgewählte Entwürfe für Markenauftritte.  
+      <p>von <strong>Maya Tanaskovic</strong> · Ausgewählte Entwürfe für Markenauftritte.
          Saubere Vektor-Logos, klare Typografie und Varianten für hell/dunkel.</p>
       <div class="cta">
         <a class="btn" href="#corazon">Zu Corazon-Logos</a>
@@ -219,58 +201,58 @@
     </div>
 
     <div class="grid">
-      <!-- 13 Karten, Dateinamen wie besprochen -->
+      <!-- 13 Karten -->
       <div class="card" data-src="images/corazon_file1.jpg">
         <div class="thumb"><img src="images/corazon_file1.jpg" alt="Corazon Logo 1"></div>
-        <div class="meta"><span class="title">Corazon · 01</span><span class="tag">Branding</span></div>
+        <div class="meta"><span class="title">Corazon · 01</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/corazon_file2.jpg">
         <div class="thumb"><img src="images/corazon_file2.jpg" alt="Corazon Logo 2"></div>
-        <div class="meta"><span class="title">Corazon · 02</span><span class="tag">Monochrom</span></div>
+        <div class="meta"><span class="title">Corazon · 02</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/corazon_file3.jpg">
         <div class="thumb"><img src="images/corazon_file3.jpg" alt="Corazon Logo 3"></div>
-        <div class="meta"><span class="title">Corazon · 03</span><span class="tag">Farbvariante</span></div>
+        <div class="meta"><span class="title">Corazon · 03</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/corazon_file4.jpg">
         <div class="thumb"><img src="images/corazon_file4.jpg" alt="Corazon Logo 4"></div>
-        <div class="meta"><span class="title">Corazon · 04</span><span class="tag">Typo</span></div>
+        <div class="meta"><span class="title">Corazon · 04</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/corazon_file5.jpg">
         <div class="thumb"><img src="images/corazon_file5.jpg" alt="Corazon Logo 5"></div>
-        <div class="meta"><span class="title">Corazon · 05</span><span class="tag">Icon</span></div>
+        <div class="meta"><span class="title">Corazon · 05</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/corazon_file6.jpg">
         <div class="thumb"><img src="images/corazon_file6.jpg" alt="Corazon Logo 6"></div>
-        <div class="meta"><span class="title">Corazon · 06</span><span class="tag">Dual</span></div>
+        <div class="meta"><span class="title">Corazon · 06</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/corazon_file7.jpg">
         <div class="thumb"><img src="images/corazon_file7.jpg" alt="Corazon Logo 7"></div>
-        <div class="meta"><span class="title">Corazon · 07</span><span class="tag">Negativ</span></div>
+        <div class="meta"><span class="title">Corazon · 07</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/corazon_file8.jpg">
         <div class="thumb"><img src="images/corazon_file8.jpg" alt="Corazon Logo 8"></div>
-        <div class="meta"><span class="title">Corazon · 08</span><span class="tag">Light</span></div>
+        <div class="meta"><span class="title">Corazon · 08</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/corazon_file9.jpg">
         <div class="thumb"><img src="images/corazon_file9.jpg" alt="Corazon Logo 9"></div>
-        <div class="meta"><span class="title">Corazon · 09</span><span class="tag">Dark</span></div>
+        <div class="meta"><span class="title">Corazon · 09</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/corazon_file10.jpg">
         <div class="thumb"><img src="images/corazon_file10.jpg" alt="Corazon Logo 10"></div>
-        <div class="meta"><span class="title">Corazon · 10</span><span class="tag">Flat</span></div>
+        <div class="meta"><span class="title">Corazon · 10</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/corazon_file11.jpg">
         <div class="thumb"><img src="images/corazon_file11.jpg" alt="Corazon Logo 11"></div>
-        <div class="meta"><span class="title">Corazon · 11</span><span class="tag">Bold</span></div>
+        <div class="meta"><span class="title">Corazon · 11</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/corazon_file12.jpg">
         <div class="thumb"><img src="images/corazon_file12.jpg" alt="Corazon Logo 12"></div>
-        <div class="meta"><span class="title">Corazon · 12</span><span class="tag">Outline</span></div>
+        <div class="meta"><span class="title">Corazon · 12</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/corazon_file13.jpg">
         <div class="thumb"><img src="images/corazon_file13.jpg" alt="Corazon Logo 13"></div>
-        <div class="meta"><span class="title">Corazon · 13</span><span class="tag">Marke</span></div>
+        <div class="meta"><span class="title">Corazon · 13</span><span class="tag" data-tag></span></div>
       </div>
     </div>
   </section>
@@ -286,19 +268,19 @@
     <div class="grid">
       <div class="card" data-src="images/KIAsisst_01.png">
         <div class="thumb"><img src="images/KIAsisst_01.png" alt="KI Assist Logo 1"></div>
-        <div class="meta"><span class="title">KI Assist · 01</span><span class="tag">Branding</span></div>
+        <div class="meta"><span class="title">KI Assist · 01</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/KIAsisst_02.png">
         <div class="thumb"><img src="images/KIAsisst_02.png" alt="KI Assist Logo 2"></div>
-        <div class="meta"><span class="title">KI Assist · 02</span><span class="tag">Mono</span></div>
+        <div class="meta"><span class="title">KI Assist · 02</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/KIAsisst_03.png">
         <div class="thumb"><img src="images/KIAsisst_03.png" alt="KI Assist Logo 3"></div>
-        <div class="meta"><span class="title">KI Assist · 03</span><span class="tag">Variante</span></div>
+        <div class="meta"><span class="title">KI Assist · 03</span><span class="tag" data-tag></span></div>
       </div>
       <div class="card" data-src="images/KIAsisst_04.png">
         <div class="thumb"><img src="images/KIAsisst_04.png" alt="KI Assist Logo 4"></div>
-        <div class="meta"><span class="title">KI Assist · 04</span><span class="tag">Negativ</span></div>
+        <div class="meta"><span class="title">KI Assist · 04</span><span class="tag" data-tag></span></div>
       </div>
     </div>
   </section>
@@ -317,21 +299,51 @@
       <div class="foot-note">© 2025 Maya Tanaskovic — Logo-Entwürfe & Branding</div>
       <div class="cta">
         <a class="pill" href="mailto:tanaskovicmaya@gmail.com">📧 Mail: tanaskovicmaya@gmail.com</a>
-        <!-- Wenn du später willst, kannst du hier LinkedIn/Website verlinken -->
-        <!-- <a class="pill" href="https://dein-linkedin" target="_blank" rel="noreferrer">in LinkedIn</a> -->
       </div>
     </div>
   </footer>
 
   <script>
-    // Lightbox: öffnen
+    /* ---------- 1) Label-Mapping: hier steuerst du die Badge-Texte je Bild ---------- */
+    const TAGS = {
+      // Corazon
+      "corazon_file1.jpg":  "Branding",
+      "corazon_file2.jpg":  "Monochrom",
+      "corazon_file3.jpg":  "Farbvariante",
+      "corazon_file4.jpg":  "Typo",
+      "corazon_file5.jpg":  "Icon",
+      "corazon_file6.jpg":  "Dual",
+      "corazon_file7.jpg":  "Negativ",
+      "corazon_file8.jpg":  "Light",
+      "corazon_file9.jpg":  "Flat",
+      "corazon_file10.jpg": "Outline",
+      "corazon_file11.jpg": "Bold",
+      "corazon_file12.jpg": "Contrast",
+      "corazon_file13.jpg": "Marke",
+
+      // KI Assist
+      "KIAsisst_01.png": "Branding",
+      "KIAsisst_02.png": "Mono",
+      "KIAsisst_03.png": "Variante",
+      "KIAsisst_04.png": "Negativ"
+    };
+
+    /* ---------- 2) Lightbox öffnen + Labels setzen ---------- */
     const lb = document.getElementById('lightbox');
     const lbImg = document.getElementById('lightbox-img');
     const closeBtn = document.querySelector('.lightbox__close');
 
     document.querySelectorAll('.card').forEach(card => {
+      const src = card.getAttribute('data-src');
+      const file = src?.split('/').pop();
+      const tagEl = card.querySelector('[data-tag]');
+      if (tagEl && file && TAGS[file]) {
+        tagEl.textContent = TAGS[file];
+      } else if (tagEl) {
+        tagEl.textContent = "—";
+      }
+
       card.addEventListener('click', () => {
-        const src = card.getAttribute('data-src');
         lbImg.src = src;
         lb.classList.add('open');
         lb.setAttribute('aria-hidden','false');
@@ -339,7 +351,6 @@
       });
     });
 
-    // Schließen (Button, Overlay, ESC)
     function closeLightbox(){
       lb.classList.remove('open');
       lb.setAttribute('aria-hidden','true');
